Implementando cadastro de usuários 0.3

--- a/resources/layouts/header.phtml
+++ b/resources/layouts/header.phtml
@@ -79,7 +79,7 @@
                         </a>
                         <ul class="menu-sub">
                             <li class="menu-item">
-                                <a href="" class="menu-link">
+                                <a href="/signin" class="menu-link">
                                     <div data-i18n="newusers">Novo Usuário</div>
                                 </a>
                             </li>
