--- a/resources/layouts/header.phtml
+++ b/resources/layouts/header.phtml
@@ -79,23 +79,23 @@
                         </a>
                         <ul class="menu-sub">
                             <li class="menu-item">
-                                <a href="/signin" class="menu-link">
+                                <a href="/listusers" class="menu-link">
+                                    <div data-i18n="listusers">Lista de Usuários</div>
+                                </a>
+                            </li>
+                            <li class="menu-item">
+                                <a href="/createusers" class="menu-link">
                                     <div data-i18n="newusers">Novo Usuário</div>
                                 </a>
                             </li>
                             <li class="menu-item">
                                 <a href="" class="menu-link">
-                                    <div data-i18n="allusers">Lista de Usuários</div>
+                                    <div data-i18n="profileslist">Lista de Perfis</div>
                                 </a>
                             </li>
                             <li class="menu-item">
                                 <a href="" class="menu-link">
                                     <div data-i18n="profiles">Novo Perfil</div>
-                                </a>
-                            </li>
-                            <li class="menu-item">
-                                <a href="" class="menu-link">
-                                    <div data-i18n="profileslist">Lista de Perfis</div>
                                 </a>
                             </li>
                         </ul>
@@ -198,7 +198,9 @@
                     </div>
                 </nav>
 
-                <!-- / Navbar -->
+            <div class="content-wrapper">
+
+            
                 <?= $this->content() ?>
 
                 <!-- Footer -->
