Implementando cadastro de usuários 0.5

--- a/resources/views/users/index.phtml
+++ b/resources/views/users/index.phtml
@@ -45,7 +45,7 @@
               <ul class="list-unstyled users-list m-0 avatar-group d-flex" style="padding-left: 41%;padding-right: 41%;">
                 <li data-bs-toggle="tooltip" data-popup="tooltip-custom" data-bs-placement="top"
                   class="avatar avatar-xs pull-up" title="Lucas Rodrigues">
-                  <img src="../assets/img/avatars/5.png" alt="Avatar" class="rounded-circle" />
+                  <img src="../storage/users/" alt="Avatar" class="rounded-circle" />
                 </li>
               </ul>
             </td>
