--- a/resources/views/users/index.phtml
+++ b/resources/views/users/index.phtml
@@ -35,7 +35,7 @@
                     <i class="bx bx-dots-vertical-rounded"></i>
                   </button>
                   <div class="dropdown-menu">
-                    <a class="dropdown-item" href="/showuser"><i class="bx bx-edit-alt me-1"></i>Editar</a>
+                    <a class="dropdown-item" href="/showuser?id=<?= $user['id'] ?>"><i class="bx bx-edit-alt me-1"></i>Editar</a>
                     <a class="dropdown-item" href=""><i class="bx bx-trash me-1"></i>Deletar</a>
                   </div>
                 </div>
