--- a/resources/views/users/index.phtml
+++ b/resources/views/users/index.phtml
@@ -36,7 +36,7 @@
                   </button>
                   <div class="dropdown-menu">
                     <a class="dropdown-item" href="/showuser?id=<?= $user['id'] ?>"><i class="bx bx-edit-alt me-1"></i>Editar</a>
-                    <a class="dropdown-item" href=""><i class="bx bx-trash me-1"></i>Deletar</a>
+                    <a class="dropdown-item" href="/deleteuser?id=<?= $user['id'] ?>"><i class="bx bx-trash me-1"></i>Deletar</a>
                   </div>
                 </div>
               </td>
