--- a/resources/layouts/header.phtml
+++ b/resources/layouts/header.phtml
@@ -89,12 +89,12 @@
                                 </a>
                             </li>
                             <li class="menu-item">
-                                <a href="" class="menu-link">
+                                <a href="/listprofiles" class="menu-link">
                                     <div data-i18n="profileslist">Lista de Perfis</div>
                                 </a>
                             </li>
                             <li class="menu-item">
-                                <a href="" class="menu-link">
+                                <a href="/createprofile" class="menu-link">
                                     <div data-i18n="profiles">Novo Perfil</div>
                                 </a>
                             </li>
@@ -107,7 +107,7 @@
                         </a>
                         <ul class="menu-sub">
                             <li class="menu-item">
-                                <a href="" class="menu-link" target="_blank">
+                                <a href="/logout" class="menu-link" target="_blank">
                                     <div data-i18n="Basic">Encerrar Sessão</div>
                                 </a>
                             </li>
@@ -148,7 +148,7 @@
                             <li class="nav-item navbar-dropdown dropdown-user dropdown">
                                 <a class="nav-link dropdown-toggle hide-arrow" href="javascript:void(0);" data-bs-toggle="dropdown">
                                     <div class="avatar avatar-online">
-                                        <img src="/assets/img/avatars/1.png" alt class="w-px-40 h-auto rounded-circle" />
+                                        <img src="storage/users/<?php echo $_SESSION['photo'] ?>" alt class="w-px-40 h-auto rounded-circle" />
                                     </div>
                                 </a>
                                 <ul class="dropdown-menu dropdown-menu-end">
@@ -157,12 +157,12 @@
                                             <div class="d-flex">
                                                 <div class="flex-shrink-0 me-3">
                                                     <div class="avatar avatar-online">
-                                                        <img src="/assets/img/avatars/1.png" alt class="w-px-40 h-auto rounded-circle" />
+                                                        <img src="storage/users/<?php echo $_SESSION['photo'] ?>" alt class="w-px-40 h-auto rounded-circle" />
                                                     </div>
                                                 </div>
                                                 <div class="flex-grow-1">
-                                                    <span class="fw-semibold d-block">Lucas</span>
-                                                    <small class="text-muted">Administrador</small>
+                                                    <span class="fw-semibold d-block"><?php echo $_SESSION['fullname'] ?></span>
+                                                    <small class="text-muted"><?php echo $_SESSION['profile_id'] ?></small>
                                                 </div>
                                             </div>
                                         </a>
@@ -211,8 +211,7 @@
                     >
                         <div>
                         <a
-                            href="https://themeselection.com/demo/sneat-bootstrap-html-admin-template/landing/"
-                            target="_blank"
+                            href="#"    
                             class="footer-text fw-bolder"
                             >Phone Store </a
                         >
@@ -221,7 +220,7 @@
                             </script>
                         </div>
                         <div>
-                        <a href="javascript:void(0)" class="btn btn-sm btn-outline-danger"
+                        <a href="/logout" class="btn btn-sm btn-outline-danger"
                             ><i class="bx bx-log-out-circle"></i> Finalizar Sessão</a
                         >
                         </div>
