--- a/resources/layouts/header.phtml
+++ b/resources/layouts/header.phtml
@@ -51,7 +51,7 @@
                         <h3 class="app-brand-text menu-text fw-bolder ms-2 title">Phone Store</h3>
                     </a>
 
-                    <a href="javascript:void(0);" class="layout-menu-toggle menu-link text-large ms-auto d-block d-xl-none">
+                    <a href="/home" class="layout-menu-toggle menu-link text-large ms-auto d-block d-xl-none">
                         <i class="bx bx-chevron-left bx-sm align-middle"></i>
                     </a>
                 </div>
@@ -61,7 +61,7 @@
                 <ul class="menu-inner py-1">
                     <!-- Inicio -->
                     <li class="menu-item">
-                        <a href="index.html" class="menu-link">
+                        <a href="/home" class="menu-link">
                             <i class="menu-icon tf-icons bx bx-home-circle"></i>
                             <div data-i18n="Analytics">Início</div>
                         </a>
@@ -148,7 +148,7 @@
                             <li class="nav-item navbar-dropdown dropdown-user dropdown">
                                 <a class="nav-link dropdown-toggle hide-arrow" href="javascript:void(0);" data-bs-toggle="dropdown">
                                     <div class="avatar avatar-online">
-                                        <img src="storage/users/<?php echo $_SESSION['photo'] ?>" alt class="w-px-40 h-auto rounded-circle" />
+                                        <img src="storage/users/<?php echo $_SESSION['photo'] ?>" alt class="w-px-40 rounded-circle" />
                                     </div>
                                 </a>
                                 <ul class="dropdown-menu dropdown-menu-end">
@@ -157,7 +157,7 @@
                                             <div class="d-flex">
                                                 <div class="flex-shrink-0 me-3">
                                                     <div class="avatar avatar-online">
-                                                        <img src="storage/users/<?php echo $_SESSION['photo'] ?>" alt class="w-px-40 h-auto rounded-circle" />
+                                                        <img src="storage/users/<?php echo $_SESSION['photo'] ?>" alt class="w-px-40 rounded-circle" />
                                                     </div>
                                                 </div>
                                                 <div class="flex-grow-1">
