--- a/resources/layouts/header.phtml
+++ b/resources/layouts/header.phtml
@@ -33,6 +33,7 @@
 
     <!-- Helpers -->
     <script src="/assets/vendor/js/helpers.js"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
     <!--! Template customizer & Theme config files MUST be included after core stylesheets and helpers.js in the <head> section -->
     <!--? Config:  Mandatory theme config file contain global vars & default theme options, Set your preferred theme option in this file.  -->
@@ -40,6 +41,14 @@
 </head>
 
 <body>
+<?php
+    if($_GET['feedback'] === 'pwdsuccess')
+        {
+            echo '<script>
+                swal("Sucesso!", "A senhas foi alterada!", "success");
+            </script>';
+        } 
+    ?>
     <!-- Layout wrapper -->
     <div class="layout-wrapper layout-content-navbar">
         <div class="layout-container">
@@ -107,13 +116,13 @@
                         </a>
                         <ul class="menu-sub">
                             <li class="menu-item">
-                                <a href="/logout" class="menu-link" target="_blank">
-                                    <div data-i18n="Basic">Encerrar Sessão</div>
+                                <a href="" class="menu-link" target="_blank" data-bs-toggle="modal" data-bs-target="#alterSenha">
+                                    <div data-i18n="Basic">Alterar Senha</div>
                                 </a>
                             </li>
                             <li class="menu-item">
-                                <a href="" class="menu-link" target="_blank" data-bs-toggle="modal" data-bs-target="#alterSenha">
-                                    <div data-i18n="Basic">Esqueci minha senha</div>
+                                <a href="/logout" class="menu-link" target="_blank">
+                                    <div data-i18n="Basic">Encerrar Sessão</div>
                                 </a>
                             </li>
                         </ul>
@@ -246,12 +255,6 @@
                         <input type="hidden" name="id" value="<?php echo $_SESSION['id'] ?>">
                         <div class="row mb-3">
                             <div class="col md-12">
-                                <label for="senhaAtual" class="form-label">Senha Atual</label>
-                                <input type="password" id="senhaAtual" class="form-control" name="senhaAtual" placeholder="Digite a senha atual" required />
-                            </div>
-                        </div>
-                        <div class="row mb-3">
-                            <div class="col md-12">
                                 <label for="novaSenha" class="form-label">Nova Senha</label>
                                 <input type="password" id="novaSenha" class="form-control" name="novaSenha" placeholder="Digite uma nova senha" required />
                             </div>
@@ -282,7 +285,6 @@
     <script src="/assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.js"></script>
 
     <script src="/assets/vendor/js/menu.js"></script>
-    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
     <!-- endbuild -->
 
@@ -297,17 +299,23 @@
             if(novaSenha === '' || novaSenha <= 6)
             {
                 swal("Atenção!", "A senha precisa ter no minimo 6 caracteres!", "warning");
-            } else if(novaSenha != senha)
+                formsenha.novaSenha.focus();
+                return false;
+            } else if(novaSenha != senha || senha <= 6)
             {
                 swal("Atenção!", "A senhas não são iguais!", "warning");
+                formsenha.novaSenha.focus();
+                return false;
             }
-
-            return
         }
 
-        function sucesso() {
-            swal("Sucesso!", "Sua senha foi alterada!", "success");
-        }
+
+        // let urlParams = new URLSearchParams(window.location.search);
+        // let pwdSuccess = urlParams.has('feedback')
+
+        // if(pwdSuccess) {
+        //     swal("Sucesso!", "A senhas foi alterada!", "success");
+        // }
     </script>
     <!-- Fim validação -->
 
