--- a/resources/views/profile/create.phtml
+++ b/resources/views/profile/create.phtml
@@ -1,42 +1,47 @@
 <div class="container-xxl flex-grow-1 container-p-y">
     <h4 class="fw-bold py-3 mb-4"><span class="text-muted fw-light">Formulário /</span> Cadastro de Perfil</h4>
 
-    <form action="/storeprofile" method="POST">
+    <form action="/storeprofile" method="post">
         <div class="row">
-            <div class="col-md-8">
-                <div class="card mb-3">
-                    <h5 class="card-header">Criação de Perfis</h5>
+            <div class="col-xl-12">
+                <div class="card mb-4">
+                    <h5 class="card-header">Dados e permissões</h5>
+                    <!-- Checkboxes and Radios -->
                     <div class="card-body">
-                        <div class="mb-3">
-                            <label for="defaultFormControlInput" class="form-label">Nome do peril</label>
-                            <input type="text" class="form-control" name="profileName" id="defaultFormControlInput" placeholder="Administrador" aria-describedby="defaultFormControlHelp" />
+                        <div class="row gy-3">
+                            <div class="col-md">
+                                <label for="profileName" class="form-label">Nome do Perfil</label>
+                                <input class="form-control" type="text" id="profileName" name="profileName" value="<?= $this->view->dados['profileName'] ?>" autofocus />
+                            </div>
+                            <div class="col-md">
+                                <label for="largeSelect" class="form-label">Status</label>
+                                <select id="largeSelect" class="form-select" name="status">
+                                    <option value="1">Ativo</option>
+                                    <option value="0" selected>Inativo</option>
+                                </select>
+                            </div>
+                            <div class="col-md">
+
+                                <small class="text-black fw-bold">Permissões</small>
+                                <div class="form-check mt-3">
+                                    <input class="form-check-input" type="checkbox" name="vizualizar" value="1" id="parmissionCheck1" <?= $this->view->dados['vizualizar'] == '1' ? 'checked' : '' ?> />
+                                    <label class="form-check-label" for="parmissionCheck1"> Vizualizar </label>
+                                </div>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" name="cadastrar" value="1" id="parmissionCheck2" <?= $this->view->dados['atualizar'] == '1' ? 'checked' : '' ?> />
+                                    <label class="form-check-label" for="parmissionCheck2"> Cadastrar </label>
+                                </div>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" name="atualizar" value="1" id="parmissionCheck3" <?= $this->view->dados['cadastrar'] == '1' ? 'checked' : '' ?> />
+                                    <label class="form-check-label" for="parmissionCheck3"> Atualizar </label>
+                                </div>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" name="deletar" value="1" id="parmissionCheck4" <?= $this->view->dados['deletar'] == '1' ? 'checked' : '' ?> />
+                                    <label class="form-check-label" for="parmissionCheck4"> Deletar </label>
+                                </div>
+                            </div>
                         </div>
                         <button type="submit" class="btn btn-success">Salvar</button>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card-body">
-                    <div class="row gy-3">
-                        <div class="col-md">
-                            <h3 class="fw-semibold">Permissões</h3>
-                            <div class="form-check mt-3">
-                                <input class="form-check-input" type="checkbox" value="1" id="defaultCheck1" />
-                                <label class="form-check-label" for="defaultCheck1"> Vizualização </label>
-                            </div>
-                            <div class="form-check">
-                                <input class="form-check-input" type="checkbox" value="2" id="defaultCheck2" />
-                                <label class="form-check-label" for="defaultCheck2"> Cadastrar </label>
-                            </div>
-                            <div class="form-check">
-                                <input class="form-check-input" type="checkbox" value="3" id="defaultCheck3" />
-                                <label class="form-check-label" for="defaultCheck3"> Atualizar </label>
-                            </div>
-                            <div class="form-check">
-                                <input class="form-check-input" type="checkbox" value="4" id="disabledCheck1" />
-                                <label class="form-check-label" for="disabledCheck1"> Deletar </label>
-                            </div>
-                        </div>
                     </div>
                 </div>
             </div>
