--- a/resources/views/profile/show.phtml
+++ b/resources/views/profile/show.phtml
@@ -1,6 +1,6 @@
 <div class="container-xxl flex-grow-1 container-p-y">
     <h4 class="fw-bold py-3 mb-4"><span class="text-muted fw-light">Formulário /</span> Dados do Perfil</h4>
-    <form action="">
+    <form action="/updateprofile" method="post">
         <div class="row">
             <div class="col-xl-12">
                 <div class="card mb-4">
@@ -8,34 +8,40 @@
                     <!-- Checkboxes and Radios -->
                     <div class="card-body">
                         <div class="row gy-3">
+                            <input type="hidden" name="id" value="<?= $this->view->dados['id'] ?>">
                             <div class="col-md">
-                                <label for="profileName" class="form-label">Nível de permissão</label>
+                                <label for="profileName" class="form-label">Nome do Perfil</label>
                                 <input class="form-control" type="text" id="profileName" name="profileName" value="<?= $this->view->dados['profileName'] ?>" autofocus />
                             </div>
                             <div class="col-md">
+                                <label for="largeSelect" class="form-label">Status</label>
+                                <select id="largeSelect" class="form-select" name="status">
+                                    <option value="1" <?= $this->view->dados['status'] == 1 ? 'selected' : '' ?> >Ativo</option>
+                                    <option value="0" <?= $this->view->dados['status'] == 0 ? 'selected' : '' ?> >Inativo</option>
+                                </select>
+                            </div>
+                            <div class="col-md">
+                            
                                 <small class="text-black fw-bold">Permissões</small>
                                 <div class="form-check mt-3">
-                                    <input class="form-check-input" type="checkbox" name="show" value="" id="defaultCheck1" />
-                                    <label class="form-check-label" for="defaultCheck1"> Vizualizar </label>
+                                    <input class="form-check-input" type="checkbox" name="vizualizar" value="1" id="parmissionCheck1" <?= $this->view->dados['vizualizar'] == '1' ? 'checked' : '' ?> />
+                                    <label class="form-check-label" for="parmissionCheck1"> Vizualizar </label>
                                 </div>
                                 <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" name="select" value="" id="defaultCheck2" />
-                                    <label class="form-check-label" for="defaultCheck2"> Selecionar </label>
+                                    <input class="form-check-input" type="checkbox" name="cadastrar" value="1" id="parmissionCheck2" <?= $this->view->dados['cadastrar'] == '1' ? 'checked' : '' ?> />
+                                    <label class="form-check-label" for="parmissionCheck2"> Cadastrar </label>
                                 </div>
                                 <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" name="insert" value="" id="defaultCheck3" />
-                                    <label class="form-check-label" for="defaultCheck3"> Inserir </label>
+                                    <input class="form-check-input" type="checkbox" name="atualizar" value="1" id="parmissionCheck3" <?= $this->view->dados['atualizar'] == '1' ? 'checked' : '' ?> />
+                                    <label class="form-check-label" for="parmissionCheck3"> Atualizar </label>
                                 </div>
                                 <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" name="update" value="" id="disabledCheck1" />
-                                    <label class="form-check-label" for="disabledCheck1"> Atualizar </label>
-                                </div>
-                                <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" name="delete" value="" id="disabledCheck1" />
-                                    <label class="form-check-label" for="disabledCheck1"> Deletar </label>
+                                    <input class="form-check-input" type="checkbox" name="deletar" value="1" id="parmissionCheck4" <?= $this->view->dados['deletar'] == '1' ? 'checked' : '' ?> />
+                                    <label class="form-check-label" for="parmissionCheck4"> Deletar </label>
                                 </div>
                             </div>
                         </div>
+                        <button type="submit" class="btn btn-success">Salvar</button>
                     </div>
                 </div>
             </div>
