--- a/resources/views/users/create.phtml
+++ b/resources/views/users/create.phtml
@@ -13,11 +13,11 @@
                     <form method="post" action="/storeusers" enctype="multipart/form-data">
                         <div class="mb-3">
                             <label class="form-label" for="basic-default-fullname">Nome Completo *</label>
-                            <input type="text" class="form-control" id="basic-default-fullname" name="fullname" />
+                            <input type="text" class="form-control" id="basic-default-fullname" name="fullname" required/>
                         </div>
                         <div class="mb-3">
                             <label for="largeSelect" class="form-label">Perfil *</label>
-                            <select id="largeSelect" class="form-select" name="profile_id">
+                            <select id="largeSelect" class="form-select" name="profile_id" required>
                                 <option class="text-muted" selected>Selecione</option>
                                 <?php foreach($this->view->dados as $indice => $profile) { ?>
                                 <option value="<?= $profile['id'] ?>"><?= $profile['profileName'] ?></option>
@@ -27,18 +27,18 @@
                         <div class="mb-3">
                             <label class="form-label" for="basic-default-email">Email *</label>
                             <div class="input-group input-group-merge">
-                                <input type="text" id="basic-default-email" class="form-control" name="email" />
+                                <input type="text" id="basic-default-email" class="form-control" name="email" required/>
                             </div>
                         </div>
                         <div class="mb-3">
                             <label class="form-label" for="basic-default-password">Senha *</label>
                             <div class="input-group input-group-merge">
-                                <input type="password" id="basic-default-password" class="form-control" name="senha" />
+                                <input type="password" id="basic-default-password" class="form-control" name="senha" required/>
                             </div>
                         </div>
                         <div class="mb-3">
                             <label class="form-label" for="basic-default-message">Foto de Perfil *</label>
-                            <input class="form-control" type="file" name="photo" />
+                            <input class="form-control" type="file" name="photo" required/>
                         </div>
 
                         <button type="submit" class="btn btn-success">Salvar</button>
