Salvando imagens no diretório

--- a/resources/views/products/create.phtml
+++ b/resources/views/products/create.phtml
@@ -27,7 +27,7 @@
                                     <div class="d-flex align-items-start align-items-sm-center gap-4" style="margin: 2%;">
                                         <img src="../assets/img/elements/13.jpg" alt="user-avatar " class="d-block rounded" height="100" width="100" id="uploadedAvatar">
                                         <div class="button-wrapper">
-                                        <small class="text-muted">Limite: 5 Imagens (1)</small><br>
+                                        <small class="text-muted">Limite: 5 Imagens</small><br>
                                             <label for="upload" class="btn btn-info me-2 mb-4" tabindex="0">
                                                 <span class="d-none d-sm-block">Adicionar Imagens </span>
                                                 <i class="bx bx-upload d-block d-sm-none"></i>
